Fix footer link mobile tap spacing

--- a/www/src/components/Footer.scss
+++ b/www/src/components/Footer.scss
@@ -5,17 +5,16 @@
   padding: 2rem 0 1rem;
 }
 
+.Footer-links {
+  text-align: center;
+}
+
 .Footer-copyright {
   @include vrhythm(-2);
   color: $color-mono-4;
   text-align: center;
-}
-
-.Footer-links {
-  text-align: center;
 
   a {
-    @include vrhythm(-2);
     color: $color-mono-4;
   }
 }
